Fix error of color on dark mode switch background

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,14 @@
     color: #222;
 }
 
+h1 {
+    padding: 16px;
+    letter-spacing: 1px;
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+}
+
 // CONTAINERS
 
 .header {
